[package]
name = "tarkov_activity_generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.23.0"
rand = "0.8.4"
reqwest = {version = "0.11.22", features = ["blocking"]}
scraper = "0.17.1"
anyhow = "1.0.75"
thiserror = "1.0.49"
image = "0.24.7"
winapi = "0.3.9"